--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -31,7 +31,7 @@
     color: #28a745;
 }
 
-#monthlyPayment, #totalPrincipal, #totalInterest, #totalAmount {
+#monthlyPayment, #totalPrincipalValue, #totalInterestValue, #totalAmountValue {
     font-size: 1.4rem;
     font-weight: bold;
     margin-top: 10px;
@@ -48,7 +48,7 @@
         font-size: 1.4rem;
     }
 
-    #monthlyPayment, #totalPrincipal, #totalInterest, #totalAmount {
+    #monthlyPayment, #totalPrincipalValue, #totalInterestValue, #totalAmountValue {
         font-size: 1.2rem;
     }
 }
